--- a/flask_sqlite_basic/templates/result.html
+++ b/flask_sqlite_basic/templates/result.html
@@ -3,7 +3,7 @@
 Transaction Result
 {% endblock %}
 {% block content %}
-        <strong id="strong">Result of the database transaction:</strong> 
+        <strong id="strong">Result of the Student Registration</strong> 
         <div class="msg">
                 {{ msg }}
                 <img src="https://www.caaz.co.zw/wp-content/uploads/2023/01/success.gif" alt="done"> 
