--- a/flask_sqlite_basic/templates/student.html
+++ b/flask_sqlite_basic/templates/student.html
@@ -3,20 +3,24 @@
 Add New Student
 {% endblock %}
 {% block content %}
-    <form action="{{ url_for('addrec') }}" method="POST">
-        <h3>Please Add the New Student Information:</h3>
-        Name<br>
-        <input type="text" name="nm" placeholder="Enter Name" /><br>
+    <form action="{{ url_for('addrec') }}" method="POST" id="add-student-id">
+        <h3 id="adding-new-student">Add the New Student Information:</h3>
+         <label class="bear" for="">Name</label>
+         <br>
+        <input class="add-stndts" type="text" name="nm" placeholder="Enter Name" /><br>
 
-        Address<br>
-        <textarea name="add" placeholder="Enter Address"></textarea><br>
+         <label class="bear"  for="">Address</label>
+         <br>
+        <textarea id="textarea" name="add" placeholder="Enter Address"></textarea><br>
 
-        City<br>
-        <input type="text" name="city" placeholder="Enter City"/><br>
+         <label class="bear" for="">City</label>
+         <br>
+        <input class="add-stndts" type="text" name="city" placeholder="Enter City"/><br>
 
-        Enrollment Number<br>
-        <input type="text" name="enrollment_no" placeholder="Enter enrollment Number"/><br>
+         <label class="bear" for="">Enrollment Number</label>
+         <br>
+        <input class="add-stndts" type="text" name="enrollment_no" placeholder="Enter enrollment Number"/><br>
 
-        <input type="submit" value="Submit" /><br>
+        <input id="bttnn" class="add-stndts" type="submit" value="Submit" /><br>
     </form>
 {% endblock %}
