--- a/flask_sqlite_basic/templates/home.html
+++ b/flask_sqlite_basic/templates/home.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{% block title %}{% endblock %}</title>
+    <title>{% block title %}STUDENT MANAGEMENT SYSTEM{% endblock %}</title>
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='home.css')}}" />
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='table.css')}}" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
